# floor-plan-segmentation

./: .gitignore  .pre-commit-config.yaml  README.md  dataset.py  infer.py  loss.py  net.py  postprocess.py  pyproject.toml  train.py  util.py  visualize.py
.dvc/: config
configs/: best_experiment.yaml  default.yaml
configs/dataset/: floorplanrussia.yaml
data/: .gitignore  FloorPlansRussia.dvc
models/BEST_EXP/train_20231221_195147/: .gitignore  final.pt.dvc
models/DEFAULT/train_20231221_194217/: final.pt.dvc
